# bzl-gen-build

./: .cirrus.yml  .gitignore  DEVELOPING.md  README.md  prepare_all_apps.sh
.cirrus/: publish-macos-m1-build.sh
.github/: dependabot.yml
.github/ci_scripts/: integration_test.sh  prepare_output.sh
.github/workflows/: release.yml  test.yml
crates/: .gitignore  Cargo.toml  README.md
crates/driver/: Cargo.toml
crates/driver/src/: build_graph.rs  extract_defrefs.rs  extract_defs.rs  main.rs  print_build.rs  sha256_value.rs
crates/jarscanner/: Cargo.toml
crates/jarscanner/src/: errors.rs  lib.rs  main.rs
crates/jarscanner/tests/: integration_test.rs
crates/protobuf_extractor/: Cargo.toml
crates/protobuf_extractor/src/: extract_protobuf_imports.rs  main.rs
crates/python_extractor/: Cargo.toml
crates/python_extractor/src/: extract_py_bzl_gen_build_commands.rs  extract_py_imports.rs  lib.rs  main.rs
crates/python_extractor/tests/: integration_test.rs
crates/python_extractor/tests/data/: test_module.py
crates/python_utilities/: Cargo.toml
crates/python_utilities/src/: ast_builder.rs  ast_printer.rs  lib.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: build_config.rs  directive.rs  lib.rs  module_config.rs  project_conf.rs  serde_helpers.rs
crates/shared_types/src/api/: extracted_data.rs  mod.rs
crates/shared_types/src/internal_types/: mod.rs  tree_node.rs
example/: BUILD.bazel  MODULE.bazel  WORKSPACE  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_9.txt
example/build_tools/bazel_rules/: maven_dep.bzl
example/build_tools/bazel_rules/jar_scanner/: BUILD.bazel  py_build_commands.py  rule.bzl
example/build_tools/bazel_rules/jar_scanner/external_build_tooling_gen/: BUILD.bazel  MODULE.bazel
example/build_tools/bazel_rules/wheel_scanner/: py_build_commands.py  wheel_scanner.bzl
example/build_tools/lang_support/: BUILD.bazel
example/build_tools/lang_support/create_lang_build_files/: bazel_jvm_modules.json  bazel_jvm_modules_java.json  bazel_protos_modules.json  bazel_python_modules.json  bzl_gen_build_common.sh  delete_build_files.sh  fetch_binary.sh  regenerate.sh  regenerate_jvm_build_files.sh  regenerate_protos_build_files.sh  regenerate_python_build_files.sh
example/build_tools/lang_support/python/: py_binary.bzl
example/com/example/: BUILD.bazel  aa.proto  hello.py
example/com/example/foo/: BUILD.bazel  bb.proto  cc.proto
example/src/main/java/com/example/: BUILD.bazel  Hello.java
example/src/main/java/com/example/cycle/: BUILD.bazel  Foo.java
example/src/main/protos/com/example/: BUILD.bazel
example/src/main/protos/com/example/foo/: B.proto  BUILD.bazel  bb.proto  cc.proto
example/src/main/python/com/example/hello/: BUILD.bazel  hello.py
example/src/test/java/com/example/: BUILD.bazel
example/src/test/python/com/example/hello/: BUILD.bazel  hello.py
example/tests/com/example/: BUILD.bazel  Test1.java  hello_test.py
language_generators/scala-defref-extractor/: .gitignore  build.sbt  build_native.sh
language_generators/scala-defref-extractor/native-image-configs/: reflect-config.json
language_generators/scala-defref-extractor/project/: plugins.sbt
language_generators/scala-defref-extractor/src/main/scala/io/bazeltools/buildgen/javadefref/: JavaSourceEntityExtractor.scala  Main.scala
language_generators/scala-defref-extractor/src/main/scala/io/bazeltools/buildgen/scaladefref/: Main.scala  NamePart.scala  ScalaSourceEntityExtractor.scala
language_generators/scala-defref-extractor/src/main/scala/io/bazeltools/buildgen/shared/: DataApi.scala  DriverApplication.scala  Entity.scala  PathTree.scala
language_generators/scala-defref-extractor/src/test/scala/io/bazeltools/buildgen/javadefref/: CanParseFileTest.scala  JavaSourceEntityExtractorTest.scala
language_generators/scala-defref-extractor/src/test/scala/io/bazeltools/buildgen/scaladefref/: CanParseFileTest.scala  NamePartTest.scala
language_generators/scala-defref-extractor/src/test/scala/io/bazeltools/buildgen/shared/: EntityTest.scala  OrderingLaws.scala  PathTreeTest.scala
scripts/: jarscanner_perf.sh
