[package]
name = "bzl_gen_build_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.38.1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"
futures = "0.3.31"
sha2 = { version = "0.10.8", features = ["asm"] }
thiserror = "2.0.0"
lazy_static = "1.5.0"
ignore = "0.4.23"
globset = "0.4.15"
rustpython-parser = { git = "https://github.com/bazeltools/rustpython-parser.git", rev = "6f98c334d5ed709e6aa1a03ec1e20bd37859b867" }
rustpython-ast = { git = "https://github.com/bazeltools/rustpython-parser.git", rev = "6f98c334d5ed709e6aa1a03ec1e20bd37859b867", features = ["unparse"] }
pretty_env_logger = "0.5.0"
log = "0.4.22"

[dev-dependencies]
tempfile = "3.10.1"

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"

[dependencies.bzl_gen_build_python_utilities]
path = "../python_utilities"
