[package]
name = "bzl_gen_build_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.0", features = ["full"] }
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
futures = "0.3.31"
sha2 = { version = "0.10.8", features = ["asm"] }
thiserror = "2.0.12"
lazy_static = "1.5.0"
ignore = "0.4.23"
globset = "0.4.16"
rustpython-parser = { git = "https://github.com/bazeltools/rustpython-parser.git", rev = "6f98c334d5ed709e6aa1a03ec1e20bd37859b867" }
rustpython-ast = { git = "https://github.com/bazeltools/rustpython-parser.git", rev = "6f98c334d5ed709e6aa1a03ec1e20bd37859b867", features = ["unparse"] }
pretty_env_logger = "0.5.0"
log = "0.4.26"

[dev-dependencies]
tempfile = "3.10.1"

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"

[dependencies.bzl_gen_build_python_utilities]
path = "../python_utilities"
