[package]
name = "bzl_gen_jarscanner"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }
tempfile = "3.10.1"
tokio = { version = "1.42.0", features = ["full"] }

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"
