[package]
name = "bzl_gen_jarscanner"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
tempfile = "3.10.1"
tokio = { version = "1.45.1", features = ["full"] }

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"
