[package]
name = "bzl_gen_protobuf_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
pretty_env_logger = "0.5.0"
log = "0.4.21"
tree-sitter = "0.19.3"
tree-sitter-proto = { git = "https://github.com/mitchellh/tree-sitter-proto.git", rev = "42d82fa18f8afe59b5fc0b16c207ee4f84cb185f"}

[dev-dependencies]
tempfile = "3.10.1"

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"

