[package]
name = "bzl_gen_protobuf_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
pretty_env_logger = "0.5.0"
log = "0.4.22"
tree-sitter = "0.19.3"
tree-sitter-proto = { git = "https://github.com/mitchellh/tree-sitter-proto.git", rev = "42d82fa18f8afe59b5fc0b16c207ee4f84cb185f"}

[dev-dependencies]
tempfile = "3.10.1"

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"

