[package]
name = "bzl_gen_protobuf_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pretty_env_logger = "0.5.0"
log = "0.4.29"
tree-sitter = "0.22.6"
tree-sitter-proto = { git = "https://github.com/rewinfrey/tree-sitter-proto.git", rev = "8a9aac7059e829d718b54dadfb778b736702ea29"}

[dev-dependencies]
tempfile = "3.10.1"

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"

