[package]
name = "bzl_gen_python_extractor"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
walkdir = "2.5.0"
futures = "0.3.30"
sha2 = { version = "0.10.8", features = ["asm"] }
thiserror = "1.0.58"
lazy_static = "1.4.0"
ignore = "0.4.22"
rustpython-parser = "0.3.0"
rustpython-ast = { version = "0.3.0", features = ["unparse"] }
pretty_env_logger = "0.5.0"
log = "0.4.21"
encoding_rs = "0.8.33"
regex = "1.10.3"

[dev-dependencies]
tempfile = "3.10.1"

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"


[dependencies.bzl_gen_build_python_utilities]
path = "../python_utilities"
