[package]
name = "bzl_gen_python_extractor"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.91"
tokio = { version = "1.38.1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"
futures = "0.3.31"
sha2 = { version = "0.10.8", features = ["asm"] }
thiserror = "1.0.65"
lazy_static = "1.5.0"
ignore = "0.4.23"
rustpython-parser = { git = "https://github.com/bazeltools/rustpython-parser.git", rev = "6f98c334d5ed709e6aa1a03ec1e20bd37859b867" }
rustpython-ast = { git = "https://github.com/bazeltools/rustpython-parser.git", rev = "6f98c334d5ed709e6aa1a03ec1e20bd37859b867", features = ["unparse"] }
pretty_env_logger = "0.5.0"
log = "0.4.22"
encoding_rs = "0.8.34"
regex = "1.11.0"

[dev-dependencies]
tempfile = "3.10.1"

[dependencies.bzl_gen_build_shared_types]
path = "../shared_types"


[dependencies.bzl_gen_build_python_utilities]
path = "../python_utilities"
