[package]
name = "bzl_gen_build_python_utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
rustpython-parser = "0.3.0"
rustpython-ast = { version = "0.3.0", features = ["unparse"] }
