[package]
name = "bzl_gen_build_shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
# Todo remove this and use a proper error for the library
anyhow = "1.0.94"
