[package]
name = "bzl_gen_build_shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
# Todo remove this and use a proper error for the library
anyhow = "1.0.97"
