# ---- BEGIN BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
load('@rules_proto//proto:defs.bzl', 'proto_library')
load('@rules_python//python:proto.bzl', 'py_proto_library')
proto_library(name='aa_proto', srcs=['aa.proto'], visibility=['//visibility:public'])
java_proto_library(name='aa_proto_java', deps=[':aa_proto'], visibility=['//visibility:public'])
py_proto_library(name='aa_proto_py', deps=[':aa_proto'], visibility=['//visibility:public'])
# ---- END BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
# ---- BEGIN BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
py_library(name='hello', srcs=['hello.py'], deps=['@@//com/example:aa_proto_py', '@@rules_python~0.24.0~pip~pip_39_pandas//:pkg'], visibility=['//visibility:public'])
# ---- END BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
# ---- BEGIN BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
py_test(name='hello_test', srcs=['hello_test.py'], deps=['//com/example:hello'], visibility=['//visibility:public'])
# ---- END BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
