# ---- BEGIN BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

proto_library(
    name = "aa_proto",
    srcs = ["aa.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "aa_proto_java",
    visibility = ["//visibility:public"],
    deps = [":aa_proto"],
)

py_proto_library(
    name = "aa_proto_py",
    visibility = ["//visibility:public"],
    deps = [":aa_proto"],
)
# ---- END BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
# ---- BEGIN BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
load("//build_tools/lang_support/python:py_binary.bzl", "py_binary")

py_binary(
    name = "bin",
    entity_path = "com/example/hello.py",
    owning_library = ":hello",
    visibility = ["//visibility:public"],
)

py_library(
    name = "hello",
    srcs = ["hello.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@@//com/example:aa_proto_py",
        "@pip//pandas",
    ],
)

py_test(
    name = "hello_test",
    srcs = ["hello_test.py"],
    visibility = ["//visibility:public"],
    deps = ["//com/example:hello"],
)
# ---- END BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
