# ---- BEGIN BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

proto_library(
    name = "bb_proto",
    srcs = ["bb.proto"],
    visibility = ["//visibility:public"],
    deps = ["//com/example:aa_proto"],
)

java_proto_library(
    name = "bb_proto_java",
    visibility = ["//visibility:public"],
    deps = [":bb_proto"],
)

py_proto_library(
    name = "bb_proto_py",
    visibility = ["//visibility:public"],
    deps = [":bb_proto"],
)

proto_library(
    name = "cc_proto",
    srcs = ["cc.proto"],
    visibility = ["//visibility:public"],
    deps = ["//com/example:aa_proto"],
)

java_proto_library(
    name = "cc_proto_java",
    visibility = ["//visibility:public"],
    deps = [":cc_proto"],
)

py_proto_library(
    name = "cc_proto_py",
    visibility = ["//visibility:public"],
    deps = [":cc_proto"],
)
# ---- END BZL_GEN_BUILD_GENERATED_CODE ---- no_hash
