load('@rules_proto//proto:defs.bzl', 'proto_library')
load('@rules_python//python:proto.bzl', 'py_proto_library')
proto_library(name='aa_proto', srcs=['aa.proto'], visibility=['//visibility:public'])
java_proto_library(name='aa_proto_java', deps=[':aa_proto'], visibility=['//visibility:public'])
py_proto_library(name='aa_proto_py', deps=[':aa_proto'], visibility=['//visibility:public'])