load('@rules_proto//proto:defs.bzl', 'proto_library')
load('@rules_python//python:proto.bzl', 'py_proto_library')
filegroup(name='foo_files', srcs=glob(include=['**/*.proto']), visibility=['//visibility:public'])
proto_library(name='foo', srcs=[':foo_files'], deps=['//src/main/protos/com/example'], visibility=['//visibility:public'])
java_proto_library(name='foo_java', deps=[':foo'], visibility=['//visibility:public'])
py_proto_library(name='foo_py', deps=[':foo'], visibility=['//visibility:public'])